--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,7 +1,7 @@
 name: Manually triggered workflow
 on:
   workflow_dispatch:
-    input:
+    inputs:
       name:
         description: 'Person to greet'
         required: true
