--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Bump version and push tag
-        uses: openvmi/github-tag-action@master
+        uses: openvmi/github-tag-action@vmilabs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
