--- a/.github/workflows/helloaction.yml
+++ b/.github/workflows/helloaction.yml
@@ -15,6 +15,8 @@ jobs:
           who-to-greet: "Mona the octocat"
       - name: Get the output time
         run: |
+          ls -al
+          pwd
           echo "The time was ${{ steps.hello.outputs.time }}"
           echo "CI: $CI"
           echo "GITHUB_WORKFLOW: $GITHUB_WORKFLOW"
