--- a/.github/workflows/helloaction.yml
+++ b/.github/workflows/helloaction.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           ls -al
           pwd
+          git tags --list
           echo "The time was ${{ steps.hello.outputs.time }}"
           echo "CI: $CI"
           echo "GITHUB_WORKFLOW: $GITHUB_WORKFLOW"
