--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -31,7 +31,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Fetch tags
         id: prep
-        Run: |
+        run: |
           git fetch --tags
           latest_tag=$(git describe --tags --abbrev=0)
           echo "Hello world"
@@ -39,7 +39,7 @@ jobs:
 
       - name: get latest tag
         id: build
-        Run: |
+        run: |
           echo "The tag is ${{ steps.prep.outputs.tags}}"
 
 
