--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -5,7 +5,7 @@ name: Build and Push docker image
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
+  create:
     tags:
       - '**'
 
