--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Build docker image
         id: build
         run: |
-          echo "tag: ${{ steps.addtag.tag }}"
+          echo "tag: ${{ steps.addtag.output.tag }}"
