--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -38,6 +38,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [addTag]
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      - name: Login to DockerHub
+        run: |
+          echo "Try to login to dockerhub"
+          
       - name: Build docker image
         id: build
         run: |
