--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Bump the tag
+name: Add tag and Build docker image
 
 # Controls when the action will run. 
 on:
