--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -44,9 +44,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       
-      - name: Login to DockerHub
-        run: |
-          echo "Try to login to dockerhub"
+      - name: Login to ALiyun Registry
+        uses: docker/login-action@v1
+        with:
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ALIYUN_USERNAME }}
+          password: ${{ secrets.ALIYUN_TOKEN }}
           
       - name: Build docker image
         id: build
