--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -38,6 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [addTag]
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       
